# MegaSDK

./: .gitignore  CMakeLists.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general-queries.md
bindings/: megaapi.i
bindings/java/: CMakeLists.txt
bindings/python/: CMakeLists.txt  DESCRIPTION.rst  README.md  __init__.py  patch_director_gil.py  setup.py
cmake/modules/: sdklib_options.cmake  sdklib_target.cmake
include/mega/: version.h
